generated/checkers/refine/KN-Null-Pointer-Dereference-a54a594d-0/build_logs/syntax-repair-refine-0-3/build_stderr_1.log
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp: In static member function ‘static bool {anonymous}::SAGenTestChecker::isLoggingName(llvm::StringRef)’:
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:183:15: error: ‘class llvm::StringRef’ has no member named ‘contains_lower’
  183 |   return Name.contains_lower("dbg") ||
      |               ^~~~~~~~~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:184:15: error: ‘class llvm::StringRef’ has no member named ‘contains_lower’
  184 |          Name.contains_lower("warn") ||
      |               ^~~~~~~~~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:185:15: error: ‘class llvm::StringRef’ has no member named ‘contains_lower’
  185 |          Name.contains_lower("err") ||
      |               ^~~~~~~~~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:186:15: error: ‘class llvm::StringRef’ has no member named ‘contains_lower’
  186 |          Name.contains_lower("printk") ||
      |               ^~~~~~~~~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:187:15: error: ‘class llvm::StringRef’ has no member named ‘startswith_lower’; did you mean ‘startswith’?
  187 |          Name.startswith_lower("pr_") ||
      |               ^~~~~~~~~~~~~~~~
      |               startswith
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:188:15: error: ‘class llvm::StringRef’ has no member named ‘contains_lower’
  188 |          Name.contains_lower("log") ||
      |               ^~~~~~~~~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:189:15: error: ‘class llvm::StringRef’ has no member named ‘startswith_lower’; did you mean ‘startswith’?
  189 |          Name.startswith_lower("dev_") ||
      |               ^~~~~~~~~~~~~~~~
      |               startswith
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:190:15: error: ‘class llvm::StringRef’ has no member named ‘equals_lower’
  190 |          Name.equals_lower("xhci_dbg") ||
      |               ^~~~~~~~~~~~
make[3]: *** [tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/build.make:76: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/SAGenTestChecker.cpp.o] Error 1
make[2]: *** [CMakeFiles/Makefile2:29772: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/all] Error 2
make[1]: *** [CMakeFiles/Makefile2:29779: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/rule] Error 2
make: *** [Makefile:7495: SAGenTestPlugin] Error 2
